syntax = "proto3";

import "command.proto";

package mcfs.procedure;

/**
 * A procedure contains procedures organized into stages
 * | Field      | Description                                                  |
 * |------------|--------------------------------------------------------------|
 * | name       | The name of the sequence                                     |
 * | stages     | The stages to execute, in order of execution                 |
 */
message Procedure {
    string name = 1;
    repeated Stage stages = 2;
}

/**
 * A stage contains a sequence of commands to be executed
 * | Field      | Description                                                  |
 * |------------|--------------------------------------------------------------|
 * | name       | The name of the stage                                        |
 * | sequence   | The sequence of commands to execute                          |
 */
message Stage {
    string name = 1;
    repeated SequenceAction sequence = 2;
}

/**
 * A command to be executed at a specific time
 *
 * | Field      | Description                                                  |
 * |------------|--------------------------------------------------------------|
 * | command    | The command to execute                                       |
 * | time       | The millisecond offset from sequence beginning               |
 */
message SequenceAction {
    mcfs.command.Command command = 1;
    uint32 time = 2;
}